--- a/index.html
+++ b/index.html
@@ -45,21 +45,19 @@
       </div>
     </div>
     <div class="containerRight">
-      <div class="middleRightDiv">
-        <h3>New</h3>
-        <article class="middleRightArticle">
-          <h5>Hydrogen VS Electric Cars</h5>
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-        </article>
-        <article class="middleRightArticle">
-          <h5>The Downsides of AI Artistry</h5>
-          <p>What are the possible adverse effects of on-demand AI image generation?</p>
-        </article>
-        <article class="middleRightArticle">
-          <h5>Is VC Funding Drying Up?</h5>
-          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-        </article>
-      </div>
+      <h3>New</h3>
+      <article class="middleRightArticle">
+        <h5>Hydrogen VS Electric Cars</h5>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      </article>
+      <article class="middleRightArticle" id="middleRightArticleCenter">
+        <h5>The Downsides of AI Artistry</h5>
+        <p>What are the possible adverse effects of on-demand AI image generation?</p>
+      </article>
+      <article class="middleRightArticle">
+        <h5>Is VC Funding Drying Up?</h5>
+        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+      </article>
     </div>
   </section>
   <section class="secondContainer">
@@ -69,7 +67,7 @@
         <div class="contentBottomDiv">
           <h3>01</h3>
           <h5>Reviving Retro PCs</h5>
-          <p>What happens when old PCs are given modern upgrades?</p>
+          <p>What happens when old PCs<br> are given modern upgrades?</p>
         </div>
       </article>
       <article class="bottomArticle">
@@ -77,7 +75,7 @@
         <div class="contentBottomDiv">
           <h3>02</h3>
           <h5>Top 10 Laptops of 2022</h5>
-          <p>Our best picks for various needs and budgets.</p>
+          <p>Our best picks for various<br> needs and budgets.</p>
         </div>
       </article>
       <article class="bottomArticle">
@@ -85,22 +83,14 @@
         <div class="contentBottomDiv">
           <h3>03</h3>
           <h5>The Growth of Gaming</h5>
-          <p>How the pandemic has sparked fresh opportunities.</p>
+          <p>How the pandemic has sparked<br> fresh opportunities.</p>
         </div>
       </article>
     </div>
   </section>
- 
-  
-  
-
-  
-  
-  
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Forcica">Forcica</a>.
   </div>
 </body>
 </html>
